--- a/shopping cart/shopping cart_style.css
+++ b/shopping cart/shopping cart_style.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     background-color: #fff;
 }
-
+/*Top bar */
 #topbar {
     display: flex;
     position: fixed;
@@ -29,7 +29,7 @@ body {
     padding-top: 40px;
     padding-left: 300px;
 }
-
+/*Side menu */
 .sidebar {
     position: fixed;
     top: 15%;
@@ -70,7 +70,7 @@ body {
 ul li:hover a {
     padding-left: 50px;
 }
-
+/*Main bar with user content */
 #mainbar {
     top: 15%;
     left: 15%;
@@ -112,7 +112,7 @@ ul li:hover a {
 #mainbar .course-container h2 {
     padding-bottom: 10px;
 }
-
+/*Table containing courses enrolled*/
 .class-Tom  {
     border-collapse:collapse;
     border-spacing:0;
@@ -153,7 +153,7 @@ ul li:hover a {
     text-align:center;
     vertical-align:middle
 }
-
+/*Enrollment button*/
 .enroll-contrl {
     padding-top: 10px;
 
