--- a/shopping cart/shopping cart_style.css
+++ b/shopping cart/shopping cart_style.css
@@ -112,7 +112,7 @@ ul li:hover a {
 #mainbar .course-container h2 {
     padding-bottom: 10px;
 }
-/*Table containing courses enrolled*/
+/*Table containing courses selected*/
 .class-Tom  {
     border-collapse:collapse;
     border-spacing:0;
