--- a/courseSetUp/courseSetUp.css
+++ b/courseSetUp/courseSetUp.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     background-color: #fff;
 }
-
+/*top bar */
 #topbar {
     display: flex;
     position: fixed;
@@ -29,7 +29,7 @@ body {
     padding-top: 40px;
     padding-left: 300px;
 }
-
+/*Side menu */
 .sidebar {
     position: fixed;
     top: 15%;
@@ -70,7 +70,7 @@ body {
 ul li:hover a {
     padding-left: 50px;
 }
-
+/*main bar with user information */
 #mainbar {
     top: 15%;
     left: 15%;
@@ -112,7 +112,7 @@ ul li:hover a {
 #mainbar .course-container h2 {
     padding-bottom: 10px;
 }
-
+/*Table (for future implementations for displaying results (?))*/
 .class-Tom  {
     border-collapse:collapse;
     border-spacing:0;
@@ -153,6 +153,7 @@ ul li:hover a {
     text-align:center;
     vertical-align:middle
 }
+/*Search tool for finding courses */
 .create{
     width: 70%;
     height: 70%;
