--- a/courseSetUp/courseSetUp.css
+++ b/courseSetUp/courseSetUp.css
@@ -153,7 +153,7 @@ ul li:hover a {
     text-align:center;
     vertical-align:middle
 }
-/*Search tool for finding courses */
+/*Tools for creating courses; providing course information */
 .create{
     width: 70%;
     height: 70%;
