--- a/course management/course management_style.css
+++ b/course management/course management_style.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     background-color: #fff;
 }
-
+/*Top bar */
 #topbar {
     display: flex;
     position: fixed;
@@ -29,7 +29,7 @@ body {
     padding-top: 40px;
     padding-left: 300px;
 }
-
+/*Side menu bar */
 .sidebar {
     position: fixed;
     top: 15%;
@@ -70,7 +70,7 @@ body {
 ul li:hover a {
     padding-left: 50px;
 }
-
+/*main bar displaying user info */
 #mainbar {
     top: 15%;
     left: 15%;
@@ -112,7 +112,7 @@ ul li:hover a {
 #mainbar .course-container h2 {
     padding-bottom: 10px;
 }
-
+/*Table displaying courses instructor is involved in */
 .class-Tom  {
     border-collapse:collapse;
     border-spacing:0;
